Removed the ul having search, language switcher

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -272,23 +272,6 @@
         </div><!-- .megamenu-panel END -->
     </li>
 </ul>                <!-- End menu list -->
-                <ul class="xs-menu-tools">
-                    <li>
-                        <a href="#modal-popup-1" class="languageSwitcher-button xs-modal-popup">
-                            <span class="xs-flag" style="background-image: url(assets/images/flags/006-united-states.svg);"></span>
-                            <span class="lang-title">EN</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="offset-side-bar"><i class="icon icon-cart2"></i></a>
-                    </li>
-                    <li>
-                        <a href="#modal-popup-2" class="navsearch-button xs-modal-popup"><i class="icon icon-search"></i></a>
-                    </li>
-                    <li>
-                        <a href="#" class="navSidebar-button"><i class="icon icon-burger-menu"></i></a>
-                    </li>
-                </ul>
             </div>
         </nav>
     </div><!-- .container END -->
@@ -1277,7 +1260,7 @@
 							<div class="footer-widget">
 								<div class="footer-logo-wraper">
 									<a href="index.html" class="footer-logo">
-										<img src="assets/images/logo-2.png" alt="">
+										<img src="assets/images/lightbook.png" alt="">
 									</a>
 								</div>
 							</div><!-- .footer-widget END -->
