Removed all the unnecessary links and corresponding pages which can be used later

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -64,7 +64,7 @@
             <div class="nav-menus-wrapper align-to-right">
                 <!-- menu list -->
                 <ul class="nav-menu">
-    <li><a href="#">HOME</a>
+    <!-- <li><a href="#">HOME</a>
         <div class="megamenu-panel home-menu-panel">
             <div class="row">
                 <div class="col-lg-3">
@@ -189,8 +189,8 @@
                 </div>
             </div>
         </div>
-    </li>
-    <li><a href="about.html">ABOUT</a></li>
+    </li> -->
+    <!-- <li><a href="about.html">ABOUT</a></li>
     <li>
         <a href="#">SERVICES</a>
         <ul class="nav-dropdown xs-icon-menu">
@@ -201,8 +201,8 @@
                 <a href="parallax-service.html"><i class="icon icon-customer-service"></i> Service Two</a>
             </li>
         </ul>
-    </li>
-    <li><a href="#">PAGES</a>
+    </li> -->
+    <!-- <li><a href="#">PAGES</a>
         <ul class="nav-dropdown xs-icon-menu">
             <li class="single-menu-item"><a href="cases.html"><i class="icon icon-direction"></i> Case</a></li>
             <li class="single-menu-item"><a href="case-details.html"><i class="icon icon-document"></i> Case Details</a></li>
@@ -216,8 +216,8 @@
             <li class="single-menu-item"><a href="shop-v2.html"><i class="icon icon-cart"></i> Shop Version 2</a></li>
             <li class="single-menu-item"><a href="shop-single.html"><i class="icon icon-store"></i> Shop Single</a></li>
         </ul>
-    </li>
-    <li><a href="#">BLOG</a>
+    </li> -->
+    <!-- <li><a href="#">BLOG</a>
         <ul class="nav-dropdown xs-icon-menu">
             <li class="single-menu-item"><a href="news-list.html"><i class="icon icon-presentation2"></i> News List</a></li>
             <li class="single-menu-item"><a href="blog-grid.html"><i class="icon icon-presentation2"></i> Blog Grid</a></li>
@@ -228,7 +228,7 @@
                     Single Sidebar</a></li>
         </ul>
     </li>
-    <li>
+    <li> -->
         <a href="#">ELEMENTS</a>
         <div class="megamenu-panel">
             <div class="row">
@@ -1260,7 +1260,7 @@
 							<div class="footer-widget">
 								<div class="footer-logo-wraper">
 									<a href="index.html" class="footer-logo">
-										<img src="assets/images/lightbook.png" alt="">
+										<img src="assets/images/lightbook_white_background.png" alt="">
 									</a>
 								</div>
 							</div><!-- .footer-widget END -->
