Redesigning new logos

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,9 +25,12 @@
 		<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
 		<link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
 		<link rel="stylesheet" href="assets/css/swiper.min.css">
-		<link rel="stylesheet" href="assets/css/rev-settings.css">
+        <link rel="stylesheet" href="assets/css/rev-settings.css">
+        
+        <!-- For index.html css -->
+        <link rel="stylesheet" href="assets/css/index.css" />
 
-		<!--For Plugins external css-->
+		<!-- For Plugins external css -->
 		<link rel="stylesheet" href="assets/css/plugins.css" />
 
 		<!--Theme custom css -->
@@ -488,13 +491,20 @@
 
 <!-- agency feature section -->
 <section class="xs-section-padding xs-pb-0 waypoint-tigger">
+
+    <div id="work-smarter">
+        <h2>Our Products</h2>
+        <h3>Work smarter, not harder.</h3>
+    </div>
+
+
     <div class="container">
         <div class="agency-feature-group">
             <div class="row">
                 <div class="col-md-6 col-lg-4">
                     <div class="agency-feature-box text-center">
                         <div class="xs-svg">
-                            <img src="assets/images/feature-icon/agency-feature-icon-1.png" alt="">
+                            <img src="assets/images/LMSimages/administration.png" alt="">
                         </div>
                         <h2 class="xs-title">
                             <a href="#">Administration</a>
@@ -506,7 +516,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="agency-feature-box text-center">
                         <div class="xs-svg">
-                            <img src="assets/images/feature-icon/agency-feature-icon-2.png" alt="">
+                            <img src="assets/images/LMSimages/student.png" alt="">
                         </div>
                         <h2 class="xs-title">
                             <a href="#">Student Management</a>
@@ -518,7 +528,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="agency-feature-box text-center">
                         <div class="xs-svg">
-                            <img src="assets/images/feature-icon/agency-feature-icon-3.png" alt="">
+                            <img src="assets/images/LMSimages/teacher.png" alt="">
                         </div>
                         <h2 class="xs-title">
                             <a href="#">Teacher Management</a>
@@ -532,7 +542,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="agency-feature-box text-center">
                         <div class="xs-svg">
-                            <img src="assets/images/feature-icon/agency-feature-icon-1.png" alt="">
+                            <img src="assets/images/LMSimages/sms.png" alt="">
                         </div>
                         <h2 class="xs-title">
                             <a href="#">Click to SMS</a>
@@ -544,7 +554,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="agency-feature-box text-center">
                         <div class="xs-svg">
-                            <img src="assets/images/feature-icon/agency-feature-icon-2.png" alt="">
+                            <img src="assets/images/LMSimages/transport.png" alt="">
                         </div>
                         <h2 class="xs-title">
                             <a href="#">Transport</a>
@@ -556,7 +566,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="agency-feature-box text-center">
                         <div class="xs-svg">
-                            <img src="assets/images/feature-icon/agency-feature-icon-3.png" alt="">
+                            <img src="assets/images/LMSimages/attendance.png" alt="">
                         </div>
                         <h2 class="xs-title">
                             <a href="#">Attendance</a>
@@ -570,7 +580,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="agency-feature-box text-center">
                         <div class="xs-svg">
-                            <img src="assets/images/feature-icon/agency-feature-icon-1.png" alt="">
+                            <img src="assets/images/LMSimages/dashboard.png" alt="">
                         </div>
                         <h2 class="xs-title">
                             <a href="#">Dashboard</a>
@@ -582,7 +592,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="agency-feature-box text-center">
                         <div class="xs-svg">
-                            <img src="assets/images/feature-icon/agency-feature-icon-2.png" alt="">
+                            <img src="assets/images/LMSimages/certificates.png" alt="">
                         </div>
                         <h2 class="xs-title">
                             <a href="#">Certificates</a>
@@ -594,7 +604,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="agency-feature-box text-center">
                         <div class="xs-svg">
-                            <img src="assets/images/feature-icon/agency-feature-icon-3.png" alt="">
+                            <img src="assets/images/LMSimages/exams.png" alt="">
                         </div>
                         <h2 class="xs-title">
                             <a href="#">Exams</a>
@@ -1322,7 +1332,10 @@
 			</div><!-- .footer-top-area END -->
 			<div class="wave-shape">
 				<img src="assets/images/footer-wave-shape.png" alt="">
-			</div>
+            </div>
+            
+            <div>Icons made by <a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a> from <a href="https://www.flaticon.com/" 		    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 		    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+
 		</footer>
 		<!-- footer section end -->
 		<!-- js file start -->
